# snake-arena

./: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  index.html  openapi.yaml  package-lock.json  package.json  render.yaml  tailwind.config.ts  vitest.config.ts
.github/workflows/: ci-cd.yml
backend/: Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07982f3c20bc_add_scores_table.py  c509a6e84a00_initial_migration.py
backend/app/: main.py  seed.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  game.py  live.py
backend/app/core/: config.py  database.py
backend/app/models/: domain.py  schemas.py  sql.py
backend/app/services/: database.py  game.py
backend/app/utils/: security.py
backend/tests/: conftest.py  test_api.py
backend/tests_integration/: conftest.py  test_flow.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/layout/: Header.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: game.ts
frontend/tests/: api.test.ts  setup.ts  useAuth.test.ts
src/: index.css
src/components/auth/: AuthModal.tsx  LoginForm.tsx  SignupForm.tsx
src/components/game/: GameCanvas.tsx  GameControls.tsx  MobileControls.tsx
src/hooks/: useAuth.ts  useGame.ts
src/pages/: Index.tsx
src/services/: api.ts
tests/: api.test.ts  types.test.ts  useAuth.test.ts  useGame.test.ts
(+2 files in other folders)
