[project]
name = "backend"
version = "0.1.0"
description = "Backend for Snake Arena"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.122.0",
    "greenlet>=3.2.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1"
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.25.3"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
